<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoreActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/layout1"
            style="@style/high_score_linear">

            <TextView
                style="@style/high_score_txt"
                android:layout_alignParentStart="true"
                android:text="@string/level1" />

            <TextView
                android:id="@+id/level1"
                android:layout_alignParentEnd="true"
                style="@style/high_score_txt"
                android:text="200" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout2"
            android:layout_below="@id/layout1"
            style="@style/high_score_linear">

            <TextView
                style="@style/high_score_txt"
                android:layout_alignParentStart="true"
                android:text="@string/level2" />

            <TextView
                android:id="@+id/level2"
                style="@style/high_score_txt"
                android:layout_alignParentEnd="true"
                android:text="200" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout3"
            android:layout_below="@id/layout2"
            style="@style/high_score_linear">

            <TextView
                style="@style/high_score_txt"
                android:layout_alignParentStart="true"
                android:text="@string/level3" />

            <TextView
                android:id="@+id/level3"
                style="@style/high_score_txt"
                android:layout_alignParentEnd="true"
                android:text="200" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout4"
            android:layout_below="@id/layout3"
            style="@style/high_score_linear">

            <TextView
                style="@style/high_score_txt"
                android:layout_alignParentStart="true"
                android:text="@string/random" />

            <TextView
                android:id="@+id/level4"
                style="@style/high_score_txt"
                android:layout_alignParentEnd="true"
                android:text="200" />

        </RelativeLayout>

        <Button
            style="@style/buttons"
            android:layout_below="@id/layout4"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="30dp"
            android:onClick="reset_scores"
            android:padding="20dp"
            android:text="@string/reset_scores"
            android:textAllCaps="false" />

    </RelativeLayout>

</RelativeLayout>